2005-10-21  Matthias Wimmer  <m@tthias.net>

    * jabberd/base/base_dir.c: changed output file naming for base_dir handler
    * jabberd/lib/jabberdlib.h: the SHA1 hashing result ends with a zero byte

2005-08-18  Matthias Wimmer  <m@tthias.net>

    * jsm/sessions.c: Fixed remaining issue of negative priorities
    * jsm/modules/mod_announce.c: same
    * jsm/modules/mod_offline.c: same + deleting delivered offline messages

2005-08-15  Matthias Wimmer  <m@tthias.net>

    * jsm/deliver.c: fix for the new session control protocol
    * jabberd/base/base_dir.c: make base_dir a bidirectional handler

2005-08-09  Matthias Wimmer  <m@tthias.net>

    * jabberd/static.c: new base handler base_dir for reading stanza files
    * jabberd/base/Makefile.am: same
    * jabberd/base/base_dir.c: same

2005-07-11  Matthias Wimmer  <m@tthias.net>

   * jabberd/lib/crc32.c: fixing sizeof() problem with arrays as function args
   * jabberd/lib/jutil.c: same
   * xdb_file/xdb_file.c: same

2005-07-08  Matthias Wimmer  <m@tthias.net>

    * jsm/modules/mod_useridpolicy.c: allow blocking of usernames, size limits
    * jabber.xml.dist.in: same (configuration for it)

2005-04-16  Matthias Wimmer  <m@tthias.net>

    * jabberd/lib/jabberdlib.h: support for the session control protocol
    	documented in http://jabberd.jabberstudio.org/dev/docs/session.shtml,
	new mapi events e_CREATE and e_DELETE for user creation/deletion
    * jsm/deliver.c: same
    * jsm/jsm.c: same
    * jsm/jsm.h: same
    * jsm/sessions.c: same
    * jsm/users.c: same
    * jsm/modules/mod_auth_crypt.c: same
    * jsm/modules/mod_auth_plain.c: same
    * jsm/modules/mod_browse.c: same
    * jsm/modules/mod_filter.c: same
    * jsm/modules/mod_last.c: same
    * jsm/modules/mod_offline.c: same
    * jsm/modules/mod_presence.c: same
    * jsm/modules/mod_register.c: same
    * jsm/modules/mod_roster.c: same
    * jsm/modules/mod_vcard.c: same
    * jsm/modules/mod_xml.c: same